# egophoto-import

./: CMakeLists.txt  resources.qrc
src/: FileListToImport.cpp  FileListToImport.h  FileToImport.cpp  FileToImport.h  RowDelegate.qml  main.cpp  main.qml
